--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="container">
             <!-- Start Top Player Section -->
             <div class="top-players">
-                <h2 class="top-player-title">Top Players</h2>
+                <h2 class="section-title">Top Players</h2>
                 <div class="players">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="Player Image">
@@ -46,6 +46,47 @@
                 </div>
             </div>
             <hr class="hr-design">
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-1.png" alt="Thumnail Images">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite<br> UI/UX Goodies</h3>
+                            <p class="autor-name"><span class="autor-by">By </span><a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-2.png" alt="Thumnail Images">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite<br> UI/UX Goodies</h3>
+                            <p class="autor-name"><span class="autor-by">By </span><a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-3.png" alt="Thumnail Images">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite<br> UI/UX Goodies</h3>
+                            <p class="autor-name"><span class="autor-by">By </span><a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumnail">
+                            <img src="images/blogs/blog-4.png" alt="Thumnail Images">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">13 of My Favorite<br> UI/UX Goodies</h3>
+                            <p class="autor-name"><span class="autor-by">By </span><a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </section>
     </main>
     <!-- Footer Start -->
