--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <!-- Font awoesome Cdn  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Main Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -83,6 +86,79 @@
                         <div class="blog-info">
                             <h3 class="blog-title">13 of My Favorite<br> UI/UX Goodies</h3>
                             <p class="autor-name"><span class="autor-by">By </span><a href="#">Danny Sapio</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="lattest-courses">
+                <h2 class="section-title">Lattest Course</h2>
+                <div class="courses">
+                    <article class="course">
+                        <div class="course-thumbnail">
+                            <img src="images/courses/course-1.png" alt="Course Image">
+                        </div>
+                        <div class="about-course">
+                            <h3 class="course-title">React - The Complete <br>Guide 2020</h3>
+                            <p class="course-instructor">Reed Krakoff.</p>
+                        </div>
+                        <div class="course-info">
+                            <div class="course-rating">
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-empty"></i>
+                                <span class="course-rating-number">4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <a href="#"><i class="fa-solid fa-clock"></i> 01:40 hr</a>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="course">
+                        <div class="course-thumbnail">
+                            <img src="images/courses/course-2.png" alt="Course Image">
+                        </div>
+                        <div class="about-course">
+                            <h3 class="course-title">React - The Complete <br>Guide 2020</h3>
+                            <p class="course-instructor">Reed Krakoff.</p>
+                        </div>
+                        <div class="course-info">
+                            <div class="course-rating">
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-empty"></i>
+                                <span class="course-rating-number">4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <a href="#"><i class="fa-solid fa-clock"></i> 01:40 hr</a>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="course">
+                        <div class="course-thumbnail">
+                            <img src="images/courses/course-3.png" alt="Course Image">
+                        </div>
+                        <div class="about-course">
+                            <h3 class="course-title">React - The Complete <br>Guide 2020</h3>
+                            <p class="course-instructor">Reed Krakoff.</p>
+                        </div>
+                        <div class="course-info">
+                            <div class="course-rating">
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-solid"></i>
+                                <i class="fa-solid fa-star fa-star-empty"></i>
+                                <span class="course-rating-number">4.5</span>
+                            </div>
+                            <div class="course-duration">
+                                <a href="#"><i class="fa-solid fa-clock"></i> 01:40 hr</a>
+                            </div>
                         </div>
                     </article>
                 </div>
